--- a/public/css/mechanics/addReport.css
+++ b/public/css/mechanics/addReport.css
@@ -6,7 +6,7 @@
 
 /* get local font to the webpage */
 @font-face {
-    font-family: 'sfy-regular';
+    font-family: 'sfmy-regular';
     src:url('../../fonts/SF-Pro-Rounded-Regular.otf');
 }
 
@@ -17,93 +17,305 @@
 
     --fs-h1 : 3rem;
     --fs-h2 : 2.25rem;
-    --fs-h3 : 1.25rem;
+    --fs-h3 : .95rem;
     --fs-body : 1rem;
-    --fs-ele : 0.75rem;
+    --fs-ele : 0.8rem;
 
     --fw-reg : 300;
     --fw-bold : 900;
+    --fw-lightBold : 500;
 
-    --ff-family : 'sfy-regular', sans-serif;
+    --ff-family : 'sfmy-regular', sans-serif;
 }
 
 @media (min-width : 800px){
     :root{
         --fs-h1 : 4rem;
         --fs-h2 : 3.75rem;
-        --fs-h3 : 1.5rem;
+        --fs-h3 : 1.3rem;
         --fs-body : 1.2rem;
-        --fs-ele : 0.8rem
+        --fs-ele : 0.9rem
     }
 }
 
-/* ****************************************************************************** */
 body{
     margin: 0;
     background: var(--clr-light);
     font-family: var(--ff-family);
     font-size: var(--fs-body);
     line-height: 1.4;
+    display: flex;
+    flex-direction: row;
 }
 
-.btn{
-    display: inline-block;
-    width: 100%;
-    height: 3.2rem;
-    background: black;
-    color: white;
-    padding: .5em 1.5em;
+/* ***************************************************************************************************************** */
+/* //////////////////////// SIDE BAR PRESENTATION //////////////////////////////// */
+
+/* image logo handle */
+img{
+    display: block;
+    max-width: 100%;
+}
+
+/* side bar column property */
+.sidebar{
+    background-color: var(--clr-dark);
+    width: 250px;
+    height: 100vh;
+    border-top-right-radius: 4%;
+    border-bottom-right-radius: 4%;
+
+}
+
+.sidebar--logo{
+    border-top-right-radius: 5%;
+    background-color: var(--clr-dark);
+}
+
+/* sidebar--logo div has image and set that image property */
+.sidebar--logo--img{
+    width: 110px;
+    margin-left: 18%;
+}
+
+.detail{
+    margin: 8%;
+    margin-top: 0%;
+
+}
+
+.sidebar__detail{
+    font-size: var(--fs-h3);
+    padding: 10%;
+    padding-top: 0%;
+}
+
+.submenu{
+    font-size: var(--fs-ele);
+    font-weight: var(--fw-reg);
+    padding-left: 8%;
+    line-height: 1.5rem;
+    color: grey;
+}
+
+/* side bar TO DASHBOARD word add decoration */
+.detail__dashboard--name{
+    transition: 500ms;
+}
+
+a{
     text-decoration: none;
+    color: var(--clr-blackDark);
+}
+
+.detail__dashboard--name:hover{
+    transform: scale(1.1);
     cursor: pointer;
-    text-transform: uppercase;
+}
+
+
+/* ******************************************************************************************************* */
+/*///////////////////////////////// BUTTON DECORATION //////////////////////////////////////////////////// */
+.btn{
+    /* margin-left: 0%; */
+    border-color: black;
+    border-width: .5px;
+
+    width: 130px;
+    height: 45px;
+    color: white;
+    background: black;
+    border-radius: 20px;
+    letter-spacing: 2px;
+
+    margin-left: 35px;
+    font-size: 15px;
     font-weight: var(--fw-bold);
-    border-radius: 5px;
+    font-family: var(--ff-family);
 
     transition: 500ms;
+}
 
-    margin-bottom: 5px;
-    
-    font-family: var(--ff-family);
+.btn_add{
+    color: black;
+    background-color: var(--clr-light);
+
 }
 
 .btn:hover{
-    transform: scale(1.09);
+    transform: scale(1.1);
 }
 
-/* title adjustment */
-.lower__section__card--title,
-.upper__section__card--title{
+/* check box style */
+input[type="checkbox"]{
+    width: 18px;
+    height: 18px;
+    margin-bottom: 0%;
+    
+}
+
+/* .cbox:checked{
+    background-color: black;
+} */
+
+/* input[type="checkbox"]:after{
+    font-family: ;
     font-weight: var(--fw-bold);
-}
+    content: "\f00c";
+    font-size: 20px;
+    color: white;
+} */
 
-/* ***************************************************************************************************** */
 
-#container{
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+/* ********************************************************************************************************* */
+/* //////////////////////////////////// ADMIN DATA AREA ///////////////////////////////////////////////////// */
+
+.data_area{
+    /* margin-top: 3rem; */
     width: 100%;
-    padding-left: 5%;
-    padding-right: 5%;
+    background-color: var(--clr-light);
 }
 
-#upper_section{
+/* *********************************************************************************************************** */
+/* ///////////////////////////////////  DASHBOARD  //////////////////////////////////////////////////////////// */
+
+/* control imag behaviour */
+img{
+    display: block;
+    max-width: 100%;
+}
+
+
+.dashboard--header{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 1%;
-    margin-top: 52.2px;
-    margin-bottom: 18px;
-    margin-right: 4%;
-    padding-left: 19px;
+    padding: .7%;
+    margin-top: .5%;
+    margin-right: 2%;
 }
 
-.title{
-    display: inline-block;
-    font-size: 34px;
-    font-weight: bold;
-    padding-left:0;
+.dashboard__header--title{
+    margin-left: 4%;
+    font-size: 1.5rem;
+}
+
+.dashboard__header--search{
+    margin-left: 20%;
+    width: 30%;
+}
+
+.dashboard__header--searchbox{
+    border-color: black;
+    outline: none;
+    border-radius: 8px;
+    font-size: 70%;
+    /* font-family: inherit; */
+    /* color: white; */
+    /* background-color: #7c7c7c7c; */
+    padding: 0.5em 1em 0.3em 1.5em;
+    width: 80%;
+    margin-bottom: 1%;
+
+    background-color: var(--clr-dark);
+}
+
+.dashboard__header--search,
+.dashboard__header--helpsetting,
+.dashboard__user__detail{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    right: 3rem;
+    gap: 1rem;
+    margin-right: 2%;
+}
+
+.imgProperty{
+    max-width: 40px;
+    border-radius: 50%;
+}
+
+.dashboard__icon{
+    max-width: 30px;
+    transition: 500ms;
+    
+}
+
+.searchicon{
+    max-width: 20px;
+}
+
+.dashboard__icon:hover{
+    transform: scale(1.1);
+}
+
+
+/* ********************************************************************************************************* */
+/* ///////////////////////////////  REAL DATA AREA TOP TITLE AND TWO BUTTON ROW//////////////////////////// */
+
+.data__area--top{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: .7%;
+    margin-top: 1%;
+    margin-right: 2%;
+}
+
+.data__area__top--title{
+    font-size: 2rem;
+    margin-left: 1%;
+    font-weight: var(--fw-lightBold);
+}
+
+.data_area__top--twobuttons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 2%;
+}
+
+/* **************************************************************************************************************** */
+/* //////////////////////////////   DATA AREA //////////////////////////////////////////////////////////////// */
+
+/* detail box decoration */
+textarea,
+.detailbox{
+    border-color: black;
+    outline: none;
+    border-radius: 8px;
+    font-size: 100%;
+    /* font-family: inherit; */
+    /* color: white; */
+    /* background-color: #7c7c7c7c; */
+    padding: 0.3em 1em 0.3em 1.5em;
+    width: 70%;
+    /* margin-bottom: 2%; */
+}
+
+/* text area box property */
+
+/* ***************************************************************************************************************** */
+/* ///////////////////////////  SET THE POSITIONS OF THE DATA FORM //////////////////////////////////////////// */
+
+.data__area--detail{
+    margin-left: 1.5%;
+    /* margin-top: 2%; */
+    display: flex;
+    flex-direction: column;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* justify-content: space-between; */
+    height: 100%;
+    margin-bottom: 16px;    
 }
 
 .main_text{
@@ -121,11 +333,11 @@ body{
     font-size: 19px;
     font-weight: var(--fw-lightBold);
     border: 1px solid #000000;
-    border-radius: 14.5px;
+    border-radius: 8px;
     height: 60px;
-    padding-left: 20px;
-    padding-right: 16px;
-    width: 316px;
+    padding: 0.3em 1em 0.3em 1.5em;
+    width: 40%;
+    height: 38px;
 }
 
 .sub_text1{
@@ -136,144 +348,23 @@ body{
     font-size: 19px;
     font-weight: var(--fw-lightBold);
     border: 1px solid #000000;
-    border-radius: 14.5px;
+    border-radius: 8px;
     height: 60px;
-    padding-left: 20px;
-    width: 150px;
-}
-
-.para_text{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-size: 19px;
-    font-weight: var(--fw-lightBold);
-    border: 1px solid #000000;
-    border-radius: 14.5px;
-    height: 180px;
-    padding-left: 20px;
-    width: 316px;
-}
-
-.middle_section{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-    /* height: 450px; */
-    padding-left: 5%;
-    /* display: none; */
-}
-
-.info{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    /* justify-content: space-between; */
-    height: 100%;
-    margin-bottom: 18px;    
-}
-
-.date_time{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 316px;
-}
-
-#lower_section{
-    /* position: absolute; */
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    height: 15%;
-    /* bottom: 25px; */
-    align-items: center;
-    width: 332px;
-    padding-left: 13px;
-    /* display: none; */
-    margin-top: 9px;
-    margin-bottom: 30px;
-}
-
-.cancel_btn{
-    display: flex;
-    flex-direction: row;
-    justify-items: center;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-    height: 59px;
-    background: #ffffff;
-    border: 1px solid #000000;
-    border-radius: 60px;
-    padding-left: 13px;
-    padding-right: 13px;
-    color: rgb(0, 0, 0);
-    filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.05));
-}
-
-.create_btn{
-    display: flex;
-    flex-direction: row;
-    justify-items: center;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-    height: 59px;
-    background: #000000;
-    border-radius: 60px;
-    border-color: #000000;
-    padding-left: 13px;
-    padding-right: 13px;
-    color: white;
-    filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
-    font-size: 20px;
-    font-weight: var(--fw-lightBold);
-
-}
-
-/* .hr1{
-    border: none;
-    width: 85%;
-    border-top: 1px solid #D9D9D9;
-    margin: 0 auto;
-    margin-top:20px;
-    padding-bottom: 0;
-} */
-
-a:link {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-weight: var(--fw-lightBold);
-    font-size: 1.2rem;
+    padding: 0.3em 1em 0.3em 1.5em;
+    width: 300px;
+    height: 38px;
+    margin-right: 60px;
 }
 
 .error_text{
-    color: red;
-    font-size: 0.8rem;
-    font-weight: var(--fw-lightBold);
-    padding-left: 10px;
+    color: red; 
+    font-size:16px;
 }
 
-#qr-canvas{
-    max-width: 316px;
-}
-
-/* ***************************************************************************************************** */
-/* control imag behaviour */
-img{
-    display: block;
-    max-width: 100%;
-}
-
-
-/* *****************************************FORM */
-
-textarea  
+.textarea  
 {
+    width: 40%;
     padding-top: 15px;
     font-family:var(--ff-family);
-    font-size: 12px;   
+    font-size: 18px;   
 }
